--- a/curriculum_sequencing_rl/configs/sarl_quick.yaml
+++ b/curriculum_sequencing_rl/configs/sarl_quick.yaml
@@ -20,7 +20,8 @@ environment:
   challenge_target: 0.7
   challenge_band: 0.4
   invalid_penalty: -0.1
-  seed: 123
+
+seeds: [123, 456, 789]
 
 # SARL-only quick verification
 models: ["sarl"]
@@ -41,8 +42,7 @@ sarl:
   select_best_on_val: true
   val_episodes: 200
   eval_episodes: 120
-  # Multi-seed aggregation
-seeds: [123, 456, 789]
+  speed_threshold_norm: 0.6
   adapt_interval: 3
   adapt_regret: true
   regret_ratio_target: 0.15
@@ -87,4 +87,4 @@ evaluate_scalability: false
 evaluate_adaptability: false
 
 # Output CSV (separate file for this quick check)
-metrics_csv: "sarl_quick_no_stepcap.csv"
+metrics_csv: "sarl_quick_no_stepcap_s060.csv"
